# compy

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  settings.schema.json
compy/: git_tool.py  logger.py  pyproject.py  settings.py  touch.py  venv.py
compy/licenses/: __init__.py  mit.py
compy/scripts/: __init__.py  main.py
